[package]
name = "wasm-3d"
version = "0.1.0"
authors = ["Ajinkya <ajinkyab1987@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
console_error_panic_hook = "=0.1.6"
futures = "0.3.15"
js-sys = "0.3.39"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.62"
wasm-bindgen-futures = "0.4.24"

[dependencies.web-sys]
version = "0.3"
features = [
    "Attr",
    "CanvasRenderingContext2d",
    'Document',
    'Element',
    "Event",
    'EventTarget',
    'HtmlCanvasElement',
    "HtmlInputElement",
    'HtmlFontElement',
    'HtmlMediaElement',
    'HtmlVideoElement',
    "HtmlElement",
    'MediaDevices',
    'MediaStream',
    'MediaStreamConstraints',
    'MouseEvent',
    'Navigator',
    'Performance',
    "Text",
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlUniformLocation',
    'Window',
]